Complete styling the intro section

--- a/src/style.css
+++ b/src/style.css
@@ -69,14 +69,14 @@ body {
   animation-fill-mode: forwards;
 }
 
-#header h3 {
-font-size: 45px;
-opacity: 0;
-animation-name: header-fade;
-animation-duration: 3s;
-animation-delay: 1s;
-animation-timing-function: linear;
-animation-fill-mode: forwards;
+#header h2 {
+  font-size: 45px;
+  opacity: 0;
+  animation-name: header-fade;
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
 
 .fa-angle-down {
@@ -88,9 +88,49 @@ animation-fill-mode: forwards;
   opacity: 0;
   animation-name: arrow-flash;
   animation-duration: 2s;
-  animation-delay: 4s;
+  animation-delay: 3s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+}
+
+/*** INTRO STYLING ***/
+
+#intro {
+  height: 650px;
+}
+
+#intro h3 {
+  font-size: 40px;
+}
+
+#intro .portrait {
+  width: 85%;
+  border-radius: 30px;
+  border: 3px solid #FFF;
+  display: block;
+  margin: 0 auto;
+}
+
+#intro p {
+  font-size: 20px;
+  display: block;
+  margin: 0 auto;
+}
+
+.btn-about {
+  display: inline-block !important;
+  margin: 0 auto !important;
+  font-size: 20px;
+  color: #fff;
+  background-color: #984447;
+  padding-left: 30px !important;
+  padding-right: 30px !important;
+}
+
+.btn-about:hover {
+  color: #984447;
+  background-color: #FFF;
+  border: 2px solid #984447;
 }
 
 /*** ANIMATIONS ***/
