--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,8 @@ body {
 }
 
 .navbar-brand {
-  font-size: 24px;
+  font-size: 30px;
+  font-family: 'Yellowtail', cursive;
 }
 
 .nav-link {
@@ -45,7 +46,7 @@ body {
 /*** HEADER STYLING ***/
 
 #header {
-  background: url(../img/header.jpg);
+  background: url(../../img/header.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -122,6 +123,7 @@ body {
 
 #intro p {
   font-size: 20px;
+  line-height: 1.6;
   display: block;
   margin: 0 auto;
 }
