Add intro animation on scroll

--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,17 @@ body {
   display: inline-block;
 }
 
+.slide-up {
+  opacity: 0;
+  transform: translateY(30%);
+}
+
+.slide-up.active {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1s;
+}
+
 /*** PORTFOLIO STYLING ***/
 
 #portfolio-head {
